syntax = "proto3";

option java_multiple_files = true;
option java_package = "rpChat";
option java_outer_classname = "RpChatGreeter";

package rpChat;

service Greeter {
  rpc WelcomeMessage (GreeterReq) returns (GreeterResp) {}
}

message GreeterReq {
  string userName = 1;
}

message GreeterResp {
  string welcomeMsg = 1;
}